// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RecipientList > should conditionally disable remove button 1`] = `
<div>
  <div
    class="w-full recipient-list"
  >
    <div
      class="table-wrapper"
      role="table"
    >
      <table
        cellpadding="0"
        class="w-full table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="relative p-3 m-0 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex hidden align-top flex-inline"
              >
                <div
                  class=""
                >
                  Avatar
                </div>
              </div>
            </th>
            <th
              class="relative p-3 m-0 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
            >
              <div
                class="flex hidden align-top flex-inline"
              >
                <div
                  class=""
                >
                  Address
                </div>
              </div>
            </th>
            <th
              class="relative p-3 m-0 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex hidden align-top flex-inline"
              >
                <div
                  class=""
                >
                  Action
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="flex border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="flex-none py-6"
            >
              <div
                class="inline-flex relative justify-center items-center w-11 h-11 text-sm align-middle rounded ring-0 transition-all duration-100 ring-theme-background shrink-0"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
                >
                  <img
                    alt="FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%235CA481%22%2F%3E%3C%2Fsvg%3E"
                    title="FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="flex-1 py-6 ml-5 w-28"
            >
              <div
                class="mb-1 text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <span>
                  Recipient #1
                </span>
              </div>
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <span
                  class="text-base font-semibold text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="transition-colors duration-200 no-ligatures"
                    data-testid="TruncateEnd"
                  >
                    Recipient 1
                  </span>
                </span>
                <span
                  class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="Address__address"
                >
                  FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ
                </span>
              </div>
            </td>
            <td
              class="flex-none py-6 ml-3"
            >
              <span
                class="inline-block"
              >
                <button
                  class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 text-base font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700 focus:outline-hidden focus:ring-theme-primary-400 disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400"
                  data-testid="recipient-list__remove-recipient"
                  disabled=""
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="py-1"
                    >
                      <div>
                        <div
                          style="height: 16px; width: 16px;"
                        >
                          <svg
                            id="trash"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <path
                                d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </button>
              </span>
            </td>
          </tr>
          <tr
            class="flex border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="flex-none py-6"
            >
              <div
                class="inline-flex relative justify-center items-center w-11 h-11 text-sm align-middle rounded ring-0 transition-all duration-100 ring-theme-background shrink-0"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
                >
                  <img
                    alt="AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%236E6CEF%22%2F%3E%3C%2Fsvg%3E"
                    title="AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="flex-1 py-6 ml-5 w-28"
            >
              <div
                class="mb-1 text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <span>
                  Recipient #2
                </span>
              </div>
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <span
                  class="text-base font-semibold text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="transition-colors duration-200 no-ligatures"
                    data-testid="TruncateEnd"
                  >
                    Recipient 2
                  </span>
                </span>
                <span
                  class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="Address__address"
                >
                  AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ
                </span>
              </div>
            </td>
            <td
              class="flex-none py-6 ml-3"
            >
              <span
                class="inline-block"
              >
                <button
                  class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 text-base font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer dark:text-white hover:text-white focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:hover:bg-theme-danger-300 hover:bg-theme-danger-400 focus:outline-hidden focus:ring-theme-danger-300"
                  data-testid="recipient-list__remove-recipient"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="py-1"
                    >
                      <div>
                        <div
                          style="height: 16px; width: 16px;"
                        >
                          <svg
                            id="trash"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <path
                                d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </button>
              </span>
            </td>
          </tr>
          <tr
            class="flex border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="flex-none py-6"
            >
              <div
                class="inline-flex relative justify-center items-center w-11 h-11 text-sm align-middle rounded ring-0 transition-all duration-100 ring-theme-background shrink-0"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
                >
                  <img
                    alt="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%2345A2EB%22%2F%3E%3C%2Fsvg%3E"
                    title="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="flex-1 py-6 ml-5 w-28"
            >
              <div
                class="mb-1 text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <span>
                  Recipient #3
                </span>
              </div>
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <span
                  class="text-base font-semibold text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="transition-colors duration-200 no-ligatures"
                    data-testid="TruncateEnd"
                  >
                    Recipient 3
                  </span>
                </span>
                <span
                  class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="Address__address"
                >
                  FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ
                </span>
              </div>
            </td>
            <td
              class="flex-none py-6 ml-3"
            >
              <span
                class="inline-block"
              >
                <button
                  class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 text-base font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer dark:text-white hover:text-white focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:hover:bg-theme-danger-300 hover:bg-theme-danger-400 focus:outline-hidden focus:ring-theme-danger-300"
                  data-testid="recipient-list__remove-recipient"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="py-1"
                    >
                      <div>
                        <div
                          style="height: 16px; width: 16px;"
                        >
                          <svg
                            id="trash"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <path
                                d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </button>
              </span>
            </td>
          </tr>
          <tr
            class="flex border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="flex-none py-6"
            >
              <div
                class="inline-flex relative justify-center items-center w-11 h-11 text-sm align-middle rounded ring-0 transition-all duration-100 ring-theme-background shrink-0"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
                >
                  <img
                    alt="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%2345A2EB%22%2F%3E%3C%2Fsvg%3E"
                    title="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="flex-1 py-6 ml-5 w-28"
            >
              <div
                class="mb-1 text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <span>
                  Recipient #4
                </span>
              </div>
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <span
                  class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-text"
                  data-testid="Address__address"
                >
                  FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ
                </span>
              </div>
            </td>
            <td
              class="flex-none py-6 ml-3"
            >
              <span
                class="inline-block"
              >
                <button
                  class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 text-base font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer dark:text-white hover:text-white focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:hover:bg-theme-danger-300 hover:bg-theme-danger-400 focus:outline-hidden focus:ring-theme-danger-300"
                  data-testid="recipient-list__remove-recipient"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="py-1"
                    >
                      <div>
                        <div
                          style="height: 16px; width: 16px;"
                        >
                          <svg
                            id="trash"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <path
                                d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </button>
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`RecipientList > should render condensed variant 1`] = `
<div>
  <div
    class="w-full recipient-list"
  >
    <div
      class="table-wrapper"
      role="table"
    >
      <table
        cellpadding="0"
        class="w-full table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="relative p-3 m-0 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex hidden align-top flex-inline"
              >
                <div
                  class=""
                >
                  Avatar
                </div>
              </div>
            </th>
            <th
              class="relative p-3 m-0 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
            >
              <div
                class="flex hidden align-top flex-inline"
              >
                <div
                  class=""
                >
                  Address
                </div>
              </div>
            </th>
            <th
              class="relative p-3 m-0 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex hidden align-top flex-inline"
              >
                <div
                  class=""
                >
                  Action
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="flex items-center py-4 border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="table-cell mr-3 md:hidden"
            />
            <td
              class="hidden md:table-cell"
            >
              <div
                class="inline-flex relative justify-center items-center w-8 h-8 text-sm align-middle rounded ring-0 transition-all duration-100 ring-theme-background shrink-0"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
                >
                  <img
                    alt="FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%235CA481%22%2F%3E%3C%2Fsvg%3E"
                    title="FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="flex-1 justify-end w-28 md:ml-4"
            >
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <span
                  class="text-base font-semibold text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="transition-colors duration-200 no-ligatures"
                    data-testid="TruncateEnd"
                  >
                    Recipient 1
                  </span>
                </span>
                <span
                  class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="Address__address"
                >
                  FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ
                </span>
              </div>
            </td>
            <td
              class="table-cell ml-2 md:hidden"
            >
              <div
                class="inline-flex relative justify-center items-center w-5 h-5 text-sm align-middle rounded ring-0 transition-all duration-100 ring-theme-background shrink-0"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
                >
                  <img
                    alt="FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%235CA481%22%2F%3E%3C%2Fsvg%3E"
                    title="FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="hidden md:table-cell"
            />
          </tr>
          <tr
            class="flex items-center py-4 border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="table-cell mr-3 md:hidden"
            />
            <td
              class="hidden md:table-cell"
            >
              <div
                class="inline-flex relative justify-center items-center w-8 h-8 text-sm align-middle rounded ring-0 transition-all duration-100 ring-theme-background shrink-0"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
                >
                  <img
                    alt="AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%236E6CEF%22%2F%3E%3C%2Fsvg%3E"
                    title="AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="flex-1 justify-end w-28 md:ml-4"
            >
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <span
                  class="text-base font-semibold text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="transition-colors duration-200 no-ligatures"
                    data-testid="TruncateEnd"
                  >
                    Recipient 2
                  </span>
                </span>
                <span
                  class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="Address__address"
                >
                  AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ
                </span>
              </div>
            </td>
            <td
              class="table-cell ml-2 md:hidden"
            >
              <div
                class="inline-flex relative justify-center items-center w-5 h-5 text-sm align-middle rounded ring-0 transition-all duration-100 ring-theme-background shrink-0"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
                >
                  <img
                    alt="AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%236E6CEF%22%2F%3E%3C%2Fsvg%3E"
                    title="AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="hidden md:table-cell"
            />
          </tr>
          <tr
            class="flex items-center py-4 border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="table-cell mr-3 md:hidden"
            />
            <td
              class="hidden md:table-cell"
            >
              <div
                class="inline-flex relative justify-center items-center w-8 h-8 text-sm align-middle rounded ring-0 transition-all duration-100 ring-theme-background shrink-0"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
                >
                  <img
                    alt="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%2345A2EB%22%2F%3E%3C%2Fsvg%3E"
                    title="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="flex-1 justify-end w-28 md:ml-4"
            >
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <span
                  class="text-base font-semibold text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="transition-colors duration-200 no-ligatures"
                    data-testid="TruncateEnd"
                  >
                    Recipient 3
                  </span>
                </span>
                <span
                  class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="Address__address"
                >
                  FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ
                </span>
              </div>
            </td>
            <td
              class="table-cell ml-2 md:hidden"
            >
              <div
                class="inline-flex relative justify-center items-center w-5 h-5 text-sm align-middle rounded ring-0 transition-all duration-100 ring-theme-background shrink-0"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
                >
                  <img
                    alt="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%2345A2EB%22%2F%3E%3C%2Fsvg%3E"
                    title="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="hidden md:table-cell"
            />
          </tr>
          <tr
            class="flex items-center py-4 border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="table-cell mr-3 md:hidden"
            />
            <td
              class="hidden md:table-cell"
            >
              <div
                class="inline-flex relative justify-center items-center w-8 h-8 text-sm align-middle rounded ring-0 transition-all duration-100 ring-theme-background shrink-0"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
                >
                  <img
                    alt="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%2345A2EB%22%2F%3E%3C%2Fsvg%3E"
                    title="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="flex-1 justify-end w-28 md:ml-4"
            >
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <span
                  class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-text"
                  data-testid="Address__address"
                >
                  FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ
                </span>
              </div>
            </td>
            <td
              class="table-cell ml-2 md:hidden"
            >
              <div
                class="inline-flex relative justify-center items-center w-5 h-5 text-sm align-middle rounded ring-0 transition-all duration-100 ring-theme-background shrink-0"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
                >
                  <img
                    alt="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%2345A2EB%22%2F%3E%3C%2Fsvg%3E"
                    title="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="hidden md:table-cell"
            />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`RecipientList > should render editable 1`] = `
<div>
  <div
    class="w-full recipient-list"
  >
    <div
      class="table-wrapper"
      role="table"
    >
      <table
        cellpadding="0"
        class="w-full table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="relative p-3 m-0 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex hidden align-top flex-inline"
              >
                <div
                  class=""
                >
                  Avatar
                </div>
              </div>
            </th>
            <th
              class="relative p-3 m-0 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
            >
              <div
                class="flex hidden align-top flex-inline"
              >
                <div
                  class=""
                >
                  Address
                </div>
              </div>
            </th>
            <th
              class="relative p-3 m-0 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex hidden align-top flex-inline"
              >
                <div
                  class=""
                >
                  Action
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="flex border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="flex-none py-6"
            >
              <div
                class="inline-flex relative justify-center items-center w-11 h-11 text-sm align-middle rounded ring-0 transition-all duration-100 ring-theme-background shrink-0"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
                >
                  <img
                    alt="FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%235CA481%22%2F%3E%3C%2Fsvg%3E"
                    title="FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="flex-1 py-6 ml-5 w-28"
            >
              <div
                class="mb-1 text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <span>
                  Recipient #1
                </span>
              </div>
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <span
                  class="text-base font-semibold text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="transition-colors duration-200 no-ligatures"
                    data-testid="TruncateEnd"
                  >
                    Recipient 1
                  </span>
                </span>
                <span
                  class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="Address__address"
                >
                  FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ
                </span>
              </div>
            </td>
            <td
              class="flex-none py-6 ml-3"
            >
              <span
                class="inline-block"
              >
                <button
                  class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 text-base font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer dark:text-white hover:text-white focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:hover:bg-theme-danger-300 hover:bg-theme-danger-400 focus:outline-hidden focus:ring-theme-danger-300"
                  data-testid="recipient-list__remove-recipient"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="py-1"
                    >
                      <div>
                        <div
                          style="height: 16px; width: 16px;"
                        >
                          <svg
                            id="trash"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <path
                                d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </button>
              </span>
            </td>
          </tr>
          <tr
            class="flex border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="flex-none py-6"
            >
              <div
                class="inline-flex relative justify-center items-center w-11 h-11 text-sm align-middle rounded ring-0 transition-all duration-100 ring-theme-background shrink-0"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
                >
                  <img
                    alt="AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%236E6CEF%22%2F%3E%3C%2Fsvg%3E"
                    title="AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="flex-1 py-6 ml-5 w-28"
            >
              <div
                class="mb-1 text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <span>
                  Recipient #2
                </span>
              </div>
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <span
                  class="text-base font-semibold text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="transition-colors duration-200 no-ligatures"
                    data-testid="TruncateEnd"
                  >
                    Recipient 2
                  </span>
                </span>
                <span
                  class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="Address__address"
                >
                  AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ
                </span>
              </div>
            </td>
            <td
              class="flex-none py-6 ml-3"
            >
              <span
                class="inline-block"
              >
                <button
                  class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 text-base font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer dark:text-white hover:text-white focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:hover:bg-theme-danger-300 hover:bg-theme-danger-400 focus:outline-hidden focus:ring-theme-danger-300"
                  data-testid="recipient-list__remove-recipient"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="py-1"
                    >
                      <div>
                        <div
                          style="height: 16px; width: 16px;"
                        >
                          <svg
                            id="trash"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <path
                                d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </button>
              </span>
            </td>
          </tr>
          <tr
            class="flex border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="flex-none py-6"
            >
              <div
                class="inline-flex relative justify-center items-center w-11 h-11 text-sm align-middle rounded ring-0 transition-all duration-100 ring-theme-background shrink-0"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
                >
                  <img
                    alt="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%2345A2EB%22%2F%3E%3C%2Fsvg%3E"
                    title="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="flex-1 py-6 ml-5 w-28"
            >
              <div
                class="mb-1 text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <span>
                  Recipient #3
                </span>
              </div>
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <span
                  class="text-base font-semibold text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="transition-colors duration-200 no-ligatures"
                    data-testid="TruncateEnd"
                  >
                    Recipient 3
                  </span>
                </span>
                <span
                  class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="Address__address"
                >
                  FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ
                </span>
              </div>
            </td>
            <td
              class="flex-none py-6 ml-3"
            >
              <span
                class="inline-block"
              >
                <button
                  class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 text-base font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer dark:text-white hover:text-white focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:hover:bg-theme-danger-300 hover:bg-theme-danger-400 focus:outline-hidden focus:ring-theme-danger-300"
                  data-testid="recipient-list__remove-recipient"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="py-1"
                    >
                      <div>
                        <div
                          style="height: 16px; width: 16px;"
                        >
                          <svg
                            id="trash"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <path
                                d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </button>
              </span>
            </td>
          </tr>
          <tr
            class="flex border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="flex-none py-6"
            >
              <div
                class="inline-flex relative justify-center items-center w-11 h-11 text-sm align-middle rounded ring-0 transition-all duration-100 ring-theme-background shrink-0"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
                >
                  <img
                    alt="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%2345A2EB%22%2F%3E%3C%2Fsvg%3E"
                    title="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="flex-1 py-6 ml-5 w-28"
            >
              <div
                class="mb-1 text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <span>
                  Recipient #4
                </span>
              </div>
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <span
                  class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-text"
                  data-testid="Address__address"
                >
                  FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ
                </span>
              </div>
            </td>
            <td
              class="flex-none py-6 ml-3"
            >
              <span
                class="inline-block"
              >
                <button
                  class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 text-base font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer dark:text-white hover:text-white focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:hover:bg-theme-danger-300 hover:bg-theme-danger-400 focus:outline-hidden focus:ring-theme-danger-300"
                  data-testid="recipient-list__remove-recipient"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="py-1"
                    >
                      <div>
                        <div
                          style="height: 16px; width: 16px;"
                        >
                          <svg
                            id="trash"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <path
                                d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </button>
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`RecipientList > should render non-editable 1`] = `
<div>
  <div
    class="w-full recipient-list"
  >
    <div
      class="table-wrapper"
      role="table"
    >
      <table
        cellpadding="0"
        class="w-full table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="relative p-3 m-0 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex hidden align-top flex-inline"
              >
                <div
                  class=""
                >
                  Avatar
                </div>
              </div>
            </th>
            <th
              class="relative p-3 m-0 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
            >
              <div
                class="flex hidden align-top flex-inline"
              >
                <div
                  class=""
                >
                  Address
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="flex border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="flex-none py-6"
            >
              <div
                class="inline-flex relative justify-center items-center w-11 h-11 text-sm align-middle rounded ring-0 transition-all duration-100 ring-theme-background shrink-0"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
                >
                  <img
                    alt="FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%235CA481%22%2F%3E%3C%2Fsvg%3E"
                    title="FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="flex-1 py-6 ml-5 w-28"
            >
              <div
                class="mb-1 text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <span>
                  Recipient #1
                </span>
              </div>
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <span
                  class="text-base font-semibold text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="transition-colors duration-200 no-ligatures"
                    data-testid="TruncateEnd"
                  >
                    Recipient 1
                  </span>
                </span>
                <span
                  class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="Address__address"
                >
                  FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="flex border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="flex-none py-6"
            >
              <div
                class="inline-flex relative justify-center items-center w-11 h-11 text-sm align-middle rounded ring-0 transition-all duration-100 ring-theme-background shrink-0"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
                >
                  <img
                    alt="AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%236E6CEF%22%2F%3E%3C%2Fsvg%3E"
                    title="AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="flex-1 py-6 ml-5 w-28"
            >
              <div
                class="mb-1 text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <span>
                  Recipient #2
                </span>
              </div>
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <span
                  class="text-base font-semibold text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="transition-colors duration-200 no-ligatures"
                    data-testid="TruncateEnd"
                  >
                    Recipient 2
                  </span>
                </span>
                <span
                  class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="Address__address"
                >
                  AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="flex border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="flex-none py-6"
            >
              <div
                class="inline-flex relative justify-center items-center w-11 h-11 text-sm align-middle rounded ring-0 transition-all duration-100 ring-theme-background shrink-0"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
                >
                  <img
                    alt="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%2345A2EB%22%2F%3E%3C%2Fsvg%3E"
                    title="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="flex-1 py-6 ml-5 w-28"
            >
              <div
                class="mb-1 text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <span>
                  Recipient #3
                </span>
              </div>
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <span
                  class="text-base font-semibold text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="transition-colors duration-200 no-ligatures"
                    data-testid="TruncateEnd"
                  >
                    Recipient 3
                  </span>
                </span>
                <span
                  class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="Address__address"
                >
                  FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="flex border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="flex-none py-6"
            >
              <div
                class="inline-flex relative justify-center items-center w-11 h-11 text-sm align-middle rounded ring-0 transition-all duration-100 ring-theme-background shrink-0"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
                >
                  <img
                    alt="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%2345A2EB%22%2F%3E%3C%2Fsvg%3E"
                    title="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="flex-1 py-6 ml-5 w-28"
            >
              <div
                class="mb-1 text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <span>
                  Recipient #4
                </span>
              </div>
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <span
                  class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-text"
                  data-testid="Address__address"
                >
                  FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`RecipientList > should render without amount column 1`] = `
<div>
  <div
    class="w-full recipient-list"
  >
    <div
      class="table-wrapper"
      role="table"
    >
      <table
        cellpadding="0"
        class="w-full table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="relative p-3 m-0 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex hidden align-top flex-inline"
              >
                <div
                  class=""
                >
                  Avatar
                </div>
              </div>
            </th>
            <th
              class="relative p-3 m-0 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
            >
              <div
                class="flex hidden align-top flex-inline"
              >
                <div
                  class=""
                >
                  Address
                </div>
              </div>
            </th>
            <th
              class="relative p-3 m-0 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex hidden align-top flex-inline"
              >
                <div
                  class=""
                >
                  Amount
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="flex border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="flex-none py-6"
            >
              <div
                class="inline-flex relative justify-center items-center w-11 h-11 text-sm align-middle rounded ring-0 transition-all duration-100 ring-theme-background shrink-0"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
                >
                  <img
                    alt="FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%235CA481%22%2F%3E%3C%2Fsvg%3E"
                    title="FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="flex-1 py-6 ml-5 w-28"
            >
              <div
                class="mb-1 text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <span>
                  Recipient #1
                </span>
              </div>
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <span
                  class="text-base font-semibold text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="transition-colors duration-200 no-ligatures"
                    data-testid="TruncateEnd"
                  >
                    Recipient 1
                  </span>
                </span>
                <span
                  class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="Address__address"
                >
                  FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ
                </span>
              </div>
            </td>
            <td
              class="flex-1 py-6 pl-3 text-right shrink-0"
            >
              <div
                class="mb-1 text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <span>
                  Amount
                </span>
              </div>
              <div
                class="font-semibold"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  100 ARK
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="flex border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="flex-none py-6"
            >
              <div
                class="inline-flex relative justify-center items-center w-11 h-11 text-sm align-middle rounded ring-0 transition-all duration-100 ring-theme-background shrink-0"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
                >
                  <img
                    alt="AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%236E6CEF%22%2F%3E%3C%2Fsvg%3E"
                    title="AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="flex-1 py-6 ml-5 w-28"
            >
              <div
                class="mb-1 text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <span>
                  Recipient #2
                </span>
              </div>
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <span
                  class="text-base font-semibold text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="transition-colors duration-200 no-ligatures"
                    data-testid="TruncateEnd"
                  >
                    Recipient 2
                  </span>
                </span>
                <span
                  class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="Address__address"
                >
                  AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ
                </span>
              </div>
            </td>
            <td
              class="flex-1 py-6 pl-3 text-right shrink-0"
            >
              <div
                class="mb-1 text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <span>
                  Amount
                </span>
              </div>
              <div
                class="font-semibold"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  100 ARK
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="flex border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="flex-none py-6"
            >
              <div
                class="inline-flex relative justify-center items-center w-11 h-11 text-sm align-middle rounded ring-0 transition-all duration-100 ring-theme-background shrink-0"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
                >
                  <img
                    alt="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%2345A2EB%22%2F%3E%3C%2Fsvg%3E"
                    title="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="flex-1 py-6 ml-5 w-28"
            >
              <div
                class="mb-1 text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <span>
                  Recipient #3
                </span>
              </div>
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <span
                  class="text-base font-semibold text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="transition-colors duration-200 no-ligatures"
                    data-testid="TruncateEnd"
                  >
                    Recipient 3
                  </span>
                </span>
                <span
                  class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="Address__address"
                >
                  FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ
                </span>
              </div>
            </td>
            <td
              class="flex-1 py-6 pl-3 text-right shrink-0"
            >
              <div
                class="mb-1 text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <span>
                  Amount
                </span>
              </div>
              <div
                class="font-semibold"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  100 ARK
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="flex border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="flex-none py-6"
            >
              <div
                class="inline-flex relative justify-center items-center w-11 h-11 text-sm align-middle rounded ring-0 transition-all duration-100 ring-theme-background shrink-0"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
                >
                  <img
                    alt="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%2345A2EB%22%2F%3E%3C%2Fsvg%3E"
                    title="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="flex-1 py-6 ml-5 w-28"
            >
              <div
                class="mb-1 text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <span>
                  Recipient #4
                </span>
              </div>
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <span
                  class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-text"
                  data-testid="Address__address"
                >
                  FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ
                </span>
              </div>
            </td>
            <td
              class="flex-1 py-6 pl-3 text-right shrink-0"
            >
              <div
                class="mb-1 text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <span>
                  Amount
                </span>
              </div>
              <div
                class="font-semibold"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  100 ARK
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
